# graphics-engine

./: .clang-format  CMakeLists.txt  README.md
assets/shaders/: basic_vert.glsl  fog_frag.glsl  fog_vert.glsl
src/: Clock.hpp  Logging.hpp  main.cpp
src/Loaders/: OBJLoader.cpp  OBJLoader.hpp
src/Math/: Quaternion.hpp  Ray.cpp  Ray.hpp  Vector3.hpp
src/Rendering/: Entity.cpp  Entity.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Scene/: Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp
